kubernetes/apps/blackbox-exporter/app/networkpolicy.yaml
---
apiVersion: cilium.io/v2
kind: CiliumNetworkPolicy
metadata:
  name: blackbox-exporter
  namespace: blackbox-exporter
spec:
  endpointSelector:
    matchLabels:
      app.kubernetes.io/name: prometheus-blackbox-exporter
  ingress:
    - fromEndpoints:
        - matchLabels:
            k8s:io.kubernetes.pod.namespace: prometheus
            k8s:app.kubernetes.io/name: prometheus
      toPorts:
        - ports:
            - port: "9115"
              protocol: TCP
  egress:
    - toEndpoints:
        - matchLabels:
            k8s:io.kubernetes.pod.namespace: kube-system
            k8s-app: kube-dns
      toPorts:
        - ports:
            - port: "53"
              protocol: UDP
            - port: "53"
              protocol: TCP
          rules:
            dns:
              - matchPattern: "*"
    - toFQDNs:
        - matchPattern: "*.${SECRET_DEFAULT_DOMAIN}"
      toPorts:
        - ports:
            - port: "443"
              protocol: TCP
